Fix overflowing dropdown anchor

--- a/board/static/css/common.scss
+++ b/board/static/css/common.scss
@@ -160,7 +160,7 @@
 		li.vote:hover { opacity:.9; }
 		li.downvote:hover { background:$red-trans; }
 		li a {
-			width:100%; display:inline-block; font-size:$font-size; line-height:20px; padding:10px;
+			width:100%; box-sizing:border-box; display:inline-block; font-size:$font-size; line-height:20px; padding:10px;
 			&.scanlation { border-left:10px solid $blue; padding-left:0; }
 			&.news { border-left:10px solid $green; padding-left:0; }
 			&.subtitles { border-left:10px solid $red; padding-left:0;}
